--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- font awesome stylesheet if needed -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" /> -->
+    <!-- font awesome stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Double Heart Click</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <h3>Double Click on the image to <i class="fas fa-heart"></i> it</h3>
+    <small>You liked it <span id="times">0</span> times</small>
+    <div class="loveMe"></div>
     <script src="script.js"></script>
   </body>
 </html>
